if you have someth

--- a/templates/index1.html
+++ b/templates/index1.html
@@ -17,7 +17,7 @@
 
 <br>
 <form name="med2" , method="POST">
-   <input type="checkbox" , name="M01AB" , value="M01AB"> M01AB
+  <!-- <input type="checkbox" , name="M01AB" , value="M01AB"> M01AB -->
  <hr>
   <input type="checkbox" , name="M01AE" , value="M01AE"> M01AE
  <hr>
