--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,9 @@
 <label for="medicine">Choose a Medicine:</label>
 
 <select name="Medicine" id="Medicine">
-  <!--<option value="M01AB" name="M01AB">M01AB</option>-->
+  <!--<option value="M01AB" name="M01AB">M01AB</option>
   <option value="M01AE",name="M01AE">M01AE</option>
-  <option value="N02BA",name="N02BA">N02BA</option>
+  <option value="N02BA",name="N02BA">N02BA</option>-->
   <option value="N02BE",name="N02BE">N02BE</option>
    <option value="N05B",name="N05B">N05B</option>
    <option value="N05C",name="N05C">N05C</option>
