--- a/templates/index1.html
+++ b/templates/index1.html
@@ -17,12 +17,12 @@
 
 <br>
 <form name="med2" , method="POST">
-  <!-- <input type="checkbox" , name="M01AB" , value="M01AB"> M01AB -->
+  <!-- <input type="checkbox" , name="M01AB" , value="M01AB"> M01AB
  <hr>
   <input type="checkbox" , name="M01AE" , value="M01AE"> M01AE
  <hr>
   <input type="checkbox" , name="N02BA" , value="N02BA"> N02BA
- <hr>
+ <hr>-->
   <input type="checkbox" , name="N02BE" , value="N02BE" > N02BE
  <hr>
   <input type="checkbox" , name="N05B" , value="N05B"> N05B
